# gr-shfcc

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
c/alsacap/: Makefile  alsacap.c
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  shfccConfig.cmake  shfccConfig.cmake.in
docs/: CMakeLists.txt  README.shfcc
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: baudline.grc  channel_estimate.grc  channel_estimateN.grc  modem.grc  modem_pncomp.grc  pam_tx.grc  phasenoise.grc  phasenoise_wav.grc  psd_est.grc  psd_est_tx.grc  rx.grc  test_azimuth.grc  test_ip3.grc  test_noisy_rotator.grc  test_nsinest.grc  test_nsinest_nogui.grc  test_sro.grc  test_yeest.grc  test_yeest_nogui.grc  timing.grc  trx.grc  trx_ps_soundcard.grc  trx_soundcard.grc  tx.grc  tx_bb_to_rf.grc  tx_pilot.grc  tx_pt.grc
grc/: CMakeLists.txt  shfcc_cexp_est.block.yml  shfcc_cexp_est.xml  shfcc_map_ss.block.yml  shfcc_map_ss.xml  shfcc_ncosest_fc.block.yml  shfcc_ncosest_fc.xml  shfcc_pack_bs.block.yml  shfcc_pack_bs.xml  shfcc_phase_noise_mixer_cc.block.yml  shfcc_phase_noise_mixer_cc.xml  shfcc_sine_est.block.yml  shfcc_sine_est.xml  shfcc_tape_speed_ff.block.yml  shfcc_tape_speed_ff.xml  shfcc_vaverage_ff.block.yml  shfcc_vaverage_ff.xml
include/gnuradio/shfcc/: CMakeLists.txt  api.h  cexp_est.h  map_ss.h  ncosest_fc.h  pack_bs.h  phase_noise_mixer_cc.h  sine_est.h  tape_speed_ff.h  vaverage_ff.h
include/shfcc/: CMakeLists.txt  api.h  cexp_est.h  map_ss.h  ncosest_fc.h  pack_bs.h  phase_noise_mixer_cc.h  sine_est.h  tape_speed_ff.h  vaverage_ff.h
lib/: CMakeLists.txt  cexp_est_impl.cc  cexp_est_impl.h  map_ss_impl.cc  map_ss_impl.h  ncosest_fc_impl.cc  ncosest_fc_impl.h  pack_bs_impl.cc  pack_bs_impl.h  phase_noise_mixer_cc_impl.cc  phase_noise_mixer_cc_impl.h  qa_shfcc.cc  qa_shfcc.h  sine_est_impl.cc  sine_est_impl.h  tape_speed_ff_impl.cc  tape_speed_ff_impl.h  test_shfcc.cc  vaverage_ff_impl.cc  vaverage_ff_impl.h
matlab/: amest.m  bb_sample.m  calcsnr.m  cartim.fig  cartim.m  cexp.m  cexppn.m  cnoise.m  cosn.m  crit_interp_g.m  crit_interp_p.m  crossing.m  db.m  estimateqamparams.m  evm.m  exppn.m  fftspec.m  fftsym.m  fillqamerr.m  freqest.m  insert_vector.m  lapidoth.m  loadbin.m  noiseimpresp.m  nsinest.m  peakfit2d.m  phadif.fig  phadif.m  phasediff.m  pilot_err_metric.m  plotsinpn.m  qammetric.m  qammetric2.m  qamsync.m  rrcspan.m  samtim.fig  samtim.m  shannon.m  sinepn.m  spiralqamconst.m  (+4 more)
python/: CMakeLists.txt  __init__.py  allan.py  build_utils.py  build_utils_codes.py  dropout.py  phasenoise.py  qa_cexp_est.py  qa_map_ss.py  qa_ncosest_fc.py  qa_pack_bs.py  qa_phase_noise_mixer_cc.py  qa_sine_est.py  qa_tape_speed_ff.py  qa_vaverage_ff.py  spiralqam.py
python/gnuradio/shfcc/: CMakeLists.txt  __init__.py
python/gnuradio/shfcc/bindings/: cexp_est_python.cc  map_ss_python.cc  ncosest_fc_python.cc  pack_bs_python.cc  phase_noise_mixer_cc_python.cc  python_bindings.cc  sine_est_python.cc  tape_speed_ff_python.cc  vaverage_ff_python.cc
samples/DRM-800A/: file001.txt  file002.txt  file003.txt  file004.f32  file004.txt  file005.f32  file005.txt  file008.txt  file009.txt  file011.txt  file012.txt  file013.txt  file014.txt  file015.txt  file016.txt  file017.txt  file019.txt
swig/: CMakeLists.txt  shfcc_swig.i
